--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6562,6 +6562,384 @@ a {
 
 // --------------------------------------- CONTACTS start ---------------------------------------
 
+.contacts-page {
+}
+.contacts-page__section {
+}
+.contacts-page__container {
+  padding: 40px 0 40px;
+}
+.contacts-page__content {
+  display: grid;
+  grid-template: 740px / 717px 1fr;
+
+  .contacts-page__left-block {
+    display: grid;
+    grid-auto-flow: row;
+    border-top: 1px solid #CBCBCB;
+    grid-template: 1fr 288px / 1fr;
+
+    .contacts-page__left-wrap {
+      overflow: auto;
+      display: grid;
+      grid-auto-flow: row;
+      grid-auto-rows: max-content;
+      background: #F5F5F5;
+
+
+      &::-webkit-scrollbar {
+        width: 4px;
+      }
+
+      &::-webkit-scrollbar-track {
+        width: 4px;
+        background-color: #dedede;
+        border-radius: 100px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        width: 4px;
+        border-radius: 100px;
+        background: #b1b1b1;
+      }
+
+      .address__wrapper {
+        height: 323px;
+        overflow: hidden;
+
+        position: relative;
+        padding: 50px 80px 25px 104px;
+        background: #FFFFFF;
+        border-bottom: 1px solid #CBCBCB;
+        display: grid;
+        grid-template: 1fr 1fr / auto 1fr;
+        gap: 30px 40px;
+        border-bottom: 1px solid #CBCBCB;
+        transition: height 0.3s ease-in-out, padding 0.3s ease-in-out;
+        // transition: all 0.3s ease-in-out;
+        // -webkit-transition:300ms linear;
+        // -moz-transition:300ms linear;
+        // -o-transition:300ms linear;
+        // -ms-transition:300ms linear;
+        // transition:300ms linear;
+
+      
+        .address__item {
+          display: grid;
+          grid-auto-flow: row;
+          gap: 8px;
+      
+          .address__item-title {
+            font-family: Inter;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 16.94px;
+            text-align: left;
+            color: #616161;
+          }
+          .address__item-text {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19.36px;
+            text-align: left;
+            color: #000;
+          }
+      
+          &.address__item_address {
+            grid-column: 2 span;
+          }
+        }
+
+        .address__item_office {
+          grid-column: 2 span;
+
+          .address__item-title {
+            font-family: Inter;
+            font-size: 25px;
+            font-weight: 400;
+            line-height: 30.26px;
+            text-align: left;
+            color: #000000;
+          }
+
+          .address__time {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 23.2px;
+            text-align: left;
+            color: #616161;
+          }
+        }
+
+        .address__item-btn {
+          position: absolute;
+          top: 62px;
+          right: 75px;
+          width: 40px;
+          height: 40px;
+          display: grid;
+          place-items: center;
+          // opacity: 1;
+          transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+        }
+
+        .address__item-btn_plus {
+          opacity: 0;
+          pointer-events: none;
+          transform: rotate(180deg);
+          // transition: opacity 3s ease-in-out;
+        }
+
+        .address__item-btn_minus {
+          opacity: 1;
+          pointer-events: auto;
+          transform: rotate(180deg);
+
+          // transition: opacity 3s ease-in-out;
+        }
+
+        .address__link {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 19.36px;
+          text-align: left;
+          text-decoration-line: underline;
+          color: #748D55;
+
+        }
+
+        &.address__wrapper_close {
+          padding: 25px 80px 25px 104px;
+          height: 113px;
+          overflow: hidden;
+
+          .address__item-btn {
+            position: absolute;
+            top: 37px;
+            right: 75px;
+            width: 40px;
+            height: 40px;
+            display: grid;
+            place-items: center;
+          }
+
+          .address__item-btn_plus {
+            opacity: 1;
+            pointer-events: auto;
+          transform: rotate(180deg);
+
+          }
+  
+          .address__item-btn_minus {
+            opacity: 0;
+            pointer-events: none;
+          transform: rotate(180deg);
+
+          }
+        }
+
+        &.address__wrapper_disabled {
+          opacity: 0.5;
+          background: #F5F5F5;
+
+          .address__item-btn_plus {
+            opacity: 1;
+            pointer-events: none;
+          transform: rotate(180deg);
+
+          }
+  
+          .address__item-btn_minus {
+            opacity: 0;
+            pointer-events: none;
+            transform: rotate(180deg);
+
+          }
+        }
+      }      
+    }
+
+    .address__btn-wrap {
+      padding: 60px 80px 60px 104px;
+      background: #56693E;
+      display: grid;
+      grid-auto-flow: row;
+      grid-template: auto 1fr auto / 1fr;
+      gap: 15px;
+
+      .address__btn-title {
+        color: #FFFFFF;
+      }
+
+      .address__btn-desc {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 23.2px;
+        text-align: left;
+        color: #FFFFFF;
+        opacity: 0.8;
+      }
+
+      .address__btn {
+        min-height: 60px;
+        padding: 9px 10px;
+        border: 1.5px solid #FFFFFF;
+        border-radius: 5px;
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 21.78px;
+        text-align: center;
+        color: #FFFFFF;
+      }
+    }
+  }
+  
+  .contacts-page__right-block {
+    .contacts-page__map {
+      width: 100%;
+      height: 100%;
+
+      .marker-class {
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        width: 42px;
+        height: 58px;
+        pointer-events: none;
+      }
+
+      // [class*="ground-pane"] {
+      // filter: grayscale(1);
+      // }
+
+      // --marker
+      [class*="marker"] {
+        position: absolute;
+        bottom: 25%;
+        right: 41%;
+        width: 43px;
+        height: 23px;
+        pointer-events: none;
+      }
+
+      [class*="copyrights-pane"],
+      [class*="controls-pane"],
+      [class*="map-copyrights"] {
+        display: none !important;
+      }
+
+      .map__mark-list-wrap {
+        max-width: 494px;
+        width: 100%;
+        position: absolute;
+        // top: calc(50% - 675px/2 - 0.5px);
+        top: 62px;
+        left: 50px;
+        bottom: 63px;
+        z-index: 1;
+        background: #ffffff;
+        border-radius: 5px;
+        padding: 50px;
+        gap: 36px;
+
+        display: grid;
+        grid-auto-flow: row;
+        align-content: start;
+
+        @media (max-width: 1512px) {
+          top: 40px;
+          left: 40px;
+          padding: 40px;
+          max-width: 425px;
+        }
+
+        @media (max-width: 960px) {
+          opacity: 0;
+          visibility: hidden;
+        }
+
+        .map__title {
+          //styleName: н3;
+          font-family: Inter;
+          font-size: 25px;
+          font-weight: 400;
+          line-height: 30.26px;
+          text-align: left;
+          color: #000;
+        }
+        .map__mark-list {
+          display: grid;
+          grid-auto-flow: row;
+          gap: 20px;
+          .map__mark-item {
+            display: grid;
+            // grid-auto-flow: column;
+            grid-template-columns: auto auto 1fr;
+
+            align-items: center;
+            justify-content: start;
+            gap: 15px;
+            // display: grid;
+            // grid-template-columns: 1fr 1fr;
+            // grid-auto-flow: row;
+            // align-items: center;
+            // justify-content: center;
+            // gap: 15px 17px;
+            // padding: 31px 53px;
+            // width: 100%;
+            // height: 100%;
+            // border: 1px solid #EDEDED;
+            // border-radius: 5px;
+            font-family: Inter;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 24.2px;
+            text-align: left;
+            color: rgba(#000, 0.6);
+            cursor: pointer;
+
+            .map__mark-icon {
+              & svg circle {
+                // fill: #CEDFB8;
+              }
+
+              & svg path {
+                // fill: #56693E;
+                // stroke: #000;
+              }
+            }
+            .map__mark-text {
+              justify-self: start;
+
+              // align-self: start;
+            }
+            .map__mark-number {
+              justify-self: end;
+
+              // align-self: e;
+            }
+
+            &_active {
+              color: rgba(#000, 1);
+
+              & svg path {
+                fill: #000000;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
 // --------------------------------------- CONTACTS end ---------------------------------------
 // --------------------------------------- CATALOG start ---------------------------------------
 
