--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7485,132 +7485,7 @@ a {
 
 // --------------------------------------- CALL-FORM end ---------------------------------------
 // --------------------------------------- BUY start ---------------------------------------
-.buy-page {
-  .slider {
-    .slider__container {
-      display: grid;
-      grid-auto-flow: row;
-      grid-template: auto 1fr auto / 1fr 232px;
-      align-items: start;
-      gap: 35px 60px;
 
-      .slider__title {
-        grid-column: 2 span;
-      }
-
-      .slider__list {
-        padding-bottom: 45px;
-
-        .slider__item {
-          display: grid;
-          grid-auto-flow: row;
-          grid-template: auto 1fr auto / 1fr 700px;
-          gap: 20px 80px;
-
-          .slider__subtitle {
-            grid-column: 2 span;
-          }
-
-          .slider__text {
-            line-height: 145%;
-          }
-
-          .slider__btn {
-            min-height: 60px;
-            max-width: 270px;
-            width: 100%;
-          }
-
-          .slider__img {
-            grid-area: 2 / 2 / 4 / 3;
-            aspect-ratio: 700 / 329;
-            border-radius: 5px;
-            overflow: hidden;
-
-            & img {
-              display: block;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center;
-            }
-          }
-        }
-      }
-
-      .slider__toggle-list {
-        display: grid;
-        grid-auto-flow: row;
-        grid-template-rows: 1fr;
-
-        .slider__toggle-item {
-        }
-
-        .slider__toggle-link {
-          padding: 10px;
-          padding-left: 20px;
-          font-family: Inter;
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 22.4px;
-          text-align: left;
-          color: #8c8c8c;
-          border-left: 1px solid #d9d9d9;
-          transition: color 0.3s ease-in-out, border-color 0.3s ease-in-out;
-
-          &:hover {
-            color: #000000;
-            padding-left: 18px;
-            border-left: 3px solid #56693e;
-          }
-
-          &:active {
-            color: #000000;
-            border-left: 3px solid #56693e;
-          }
-
-          &_active {
-            color: #000000;
-            border-left: 3px solid #56693e;
-          }
-        }
-      }
-
-      .slider__facts-list {
-        grid-column: 2 span;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-        gap: 20px;
-
-        .slider__facts-item {
-          display: grid;
-          place-items: center;
-          padding: 30px;
-          min-height: 144px;
-          border: 1px solid #ededed;
-          border-radius: 5px;
-        }
-
-        .slider__facts-text {
-          font-family: Inter;
-          font-size: 18px;
-          font-weight: 400;
-          line-height: 27px;
-          text-align: center;
-          max-width: 250px;
-        }
-      }
-    }
-  }
-
-  .banks {
-    .banks__container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
-  }
-}
 
 // --------------------------------------- BUY end ---------------------------------------
 // --------------------------------------- apartments-page start ---------------------------------------
@@ -12148,7 +12023,7 @@ a {
   }
 }
 // --------------------------------------- COMMERCIAL end ---------------------------------------
-// --------------------------------------- GOODS-item start ---------------------------------------
+// --------------------------------------- commercial-item-page start ---------------------------------------
 
 .commercial-item-page {
 
@@ -13117,10 +12992,545 @@ a {
     }
   }
 }
-// --------------------------------------- GOODS-item end ---------------------------------------
+// --------------------------------------- commercial-item-page end ---------------------------------------
 
-// .slider,
-// .plans,
-// .geo {
-// display: none;
-// }
+// --------------------------------------- buy-page start ---------------------------------------
+
+.buy-page {
+  .main {
+    position: relative;
+
+    .aside-menu {
+      position: absolute;
+      top: 123px;
+      right: 100px;
+      width: 232px;
+      height: 100%;
+      // height: 200vh;
+
+      .slider__toggle-list {
+        position: sticky;
+        top: 235px;
+        right: 0;
+        width: 100%;
+        display: grid;
+        grid-auto-flow: row;
+        grid-template-rows: 1fr;
+        z-index: 1000;
+
+        .slider__toggle-item {
+        }
+
+        .slider__toggle-link {
+          display: block;
+          padding: 11px;
+          padding-left: 20px;
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 22.4px;
+          text-align: left;
+          color: #8c8c8c;
+          border-left: 1px solid #d9d9d9;
+          transition: color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+
+          &:hover {
+            color: #000000;
+            padding-left: 18px;
+            border-left: 3px solid #56693e;
+          }
+
+          &:active {
+            color: #000000;
+            border-left: 3px solid #56693e;
+          }
+
+          &_active {
+            color: #000000;
+            border-left: 3px solid #56693e;
+          }
+        }
+      }
+    }
+
+    .container {
+      border-top: 70px solid transparent;
+      margin-top: -70px;
+      padding: 40px 0 40px;
+
+      display: grid;
+      grid-template: auto / 1fr 232px;
+      gap: 60px;
+    }
+
+    // --------------------------------------  секции:
+
+    .top {
+      .top__container {
+        padding: 40px 0 115px;
+
+        .top__wrap {
+          display: grid;
+          grid-auto-flow: row;
+          grid-template: auto 1fr auto / 1fr;
+          align-items: start;
+          gap: 35px 0;
+
+          .top__title {
+            grid-column: 2 span;
+          }      
+
+          .top__content {
+            margin-bottom: 45px;
+            display: grid;
+            grid-auto-flow: row;
+            grid-template: auto 1fr auto / 1fr 700px;
+            gap: 20px 80px;
+  
+            .top__subtitle {
+              grid-column: 2 span;
+            }
+  
+            .top__text {
+              line-height: 145%;
+            }
+  
+            .top__btn {
+              min-height: 60px;
+              max-width: 270px;
+              width: 100%;
+            }
+  
+            .top__img {
+              grid-area: 2 / 2 / 4 / 3;
+              aspect-ratio: 700 / 329;
+              border-radius: 5px;
+              overflow: hidden;
+  
+              & img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+          }
+    
+          .top__facts-list {
+            grid-column: 2 span;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+            gap: 20px;
+    
+            .top__facts-item {
+              display: grid;
+              place-items: center;
+              padding: 30px;
+              min-height: 144px;
+              border: 1px solid #ededed;
+              border-radius: 5px;
+            }
+    
+            .top__facts-text {
+              font-family: Inter;
+              font-size: 18px;
+              font-weight: 400;
+              line-height: 27px;
+              text-align: center;
+              max-width: 250px;
+            }
+          }
+        }
+      }
+    }
+
+    .programms {
+      background: #F5F5F5;
+
+      .programms__container {
+        padding: 45px 0 80px;
+
+        .programms__wrap {
+          display: grid;
+          grid-auto-flow: column;
+          grid-template: 1fr / 1fr 268px;
+          gap: 20px;  
+
+          .programms__content-left {
+            display: grid;
+            grid-auto-flow: row;
+            gap: 30px;
+            .programms__title {
+            }
+            .programms__list {
+              display: grid;
+              grid-auto-flow: row;
+              gap: 10px;
+              .programms__white-box {
+                padding: 30px;
+                max-width: 940px;
+                width: 100%;
+                min-height: 85px;
+
+                background: #FFFFFF;
+                border: 1px solid #D9D9D9;
+                border-radius: 5px;
+
+                .programms__text {
+                  font-family: Inter;
+                  font-size: 20px;
+                  font-weight: 400;
+                  line-height: 24.2px;
+                  text-align: left;
+                  color: #000;
+
+                }
+              }
+            }
+          }
+
+          .programms__content-right {
+            display: grid;
+            grid-auto-flow: row;
+            align-content: start;
+            gap: 20px;
+
+            .programms__subtitle {
+            }
+
+            .programms__banks-list {
+              gap: 20px 15px;
+              max-width: 268px;
+              display: grid;
+              grid-template-columns: repeat(auto-fill, 55px);
+
+              .programms__banks-item {
+                width: 55px;
+                height: 55px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .simple {
+      .simple__container {
+        padding: 80px 0 40px;
+
+        .simple__wrap {
+          display: grid;
+          grid-auto-flow: row;
+          gap: 20px;
+          .simple__title {
+          }
+          .simple__text {
+            margin-bottom: 20px;
+            max-width: 940px;
+          }
+          .simple__list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 20px;
+            margin-bottom: 118px;
+            
+            .simple__item {
+              position: relative;
+              padding: 30px;
+              max-width: 460px;
+              min-height: 195px;
+              background: linear-gradient(231.8deg, #9ABC6F 4.26%, #7BAD3B 100%);
+              border-radius: 5px;
+              display: grid;
+              align-content: space-between;
+
+              .simple__item-title {
+                max-width: 300px;
+                font-family: Inter;
+                font-size: 22px;
+                font-weight: 600;
+                line-height: 26.63px;
+                text-align: left;
+                color: #FFFFFF;
+                text-transform: uppercase;
+              }
+
+              .simple__item-text {
+                max-width: 320px;
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 21.6px;
+                text-align: left;
+                color: #FFFFFF;
+              }
+
+              .simple__item-number {
+                font-family: Inter;
+                font-size: 30px;
+                font-weight: 400;
+                line-height: 42px;
+                text-align: left;
+                color: #748D55;
+                position: absolute;
+                top: 35px;
+                right: 30px;
+
+              }
+            }
+          }
+
+          .simple__banner {
+            position: relative;
+            width: 1420px;
+            height: 500px;
+            background: #363636;
+            border-radius: 5px;
+            padding: 116px 80px;
+
+            .simple__banner-text-wrap {
+              max-width: 590px;
+              display: grid;
+              grid-auto-flow: row;
+              gap: 40px;
+
+
+              .simple__banner-title {
+                font-family: Inter;
+                font-size: 30px;
+                font-weight: 400;
+                line-height: 42px;
+                text-align: left;
+                color: #FFFFFF;
+              }
+
+              .simple__banner-desc {
+                color: #FFFFFF;
+              }
+
+              .simple__banner-btn {
+                max-width: 271px;
+              }
+            }
+
+            .simple__background {
+              position: absolute;
+              bottom: 0;
+              right: 85px;
+              width: 577px;
+            }
+          }
+
+          .simple__aside {
+            .aside {
+            }
+          }
+        }
+      }
+    }
+
+    .installment {
+      .installment__container {
+        padding: 100px 0 40px;
+
+        .installment__wrap {
+          display: grid;
+          grid-auto-flow: column;
+          grid-template: 1fr / 1fr 1fr;
+          min-height: 340px;
+
+          .installment__img {
+            
+            
+            & img {              
+              border-radius: 5px;
+              display: block;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+
+          .simple__banner-text-wrap {
+            padding-left: 80px;
+            display: grid;
+            grid-auto-flow: row;
+            grid-template: auto auto auto / 1fr;
+            gap: 25px;
+            align-content: center;
+
+
+            .simple__banner-title {
+            }
+
+            .simple__banner-desc {
+              margin-bottom: 35px;
+            }
+
+            .simple__banner-btn {
+              max-width: 271px;
+            }
+          }
+        }
+      }
+    }
+
+    .certificates {
+      .certificates__container {
+        padding: 100px 0 100px;
+        
+        .certificates__wrap {
+          display: grid;
+          grid-auto-flow: column;
+          grid-template: 1fr / 1fr 1fr;
+          min-height: 340px;
+
+          .certificates__img {
+            order: 1;            
+            & img {              
+              border-radius: 5px;
+              display: block;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+
+          .simple__banner-text-wrap {
+            padding-right: 80px;
+            display: grid;
+            grid-auto-flow: row;
+            grid-template: auto auto auto / 1fr;
+            gap: 25px;
+            align-content: center;
+
+            .simple__banner-title {
+            }
+            
+            .simple__banner-desc {
+              margin-bottom: 35px;
+            }
+
+            .simple__banner-btn {
+              max-width: 271px;
+            }
+          }
+        }
+      }
+    }
+
+    .bot {
+      background: #363636;
+      padding: 50px 0 40px;
+  
+      .bot__container {
+  
+        .bot__wrap {
+          display: grid;
+          // width: 100%;
+          // height: 100%;
+          grid-template-columns: 460px 1fr;
+          grid-template-rows: 479px;
+          align-items: center;
+          justify-content: space-between;
+          // padding: 25px 0;
+          gap: 0 20px;
+    
+          .bot__map {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+    
+            & img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+    
+            .marker-class {
+              position: absolute;
+              bottom: 100%;
+              left: 0;
+              width: 42px;
+              height: 58px;
+              pointer-events: none;
+            }
+    
+            [class*="marker"] {
+              position: absolute;
+              bottom: 50%;
+              right: 50%;
+              width: 29px;
+              height: 44px;
+              pointer-events: none;
+            }
+          }
+          .bot__address {
+          }
+          .address {
+            padding: 50px;
+            width: 100%;
+            height: 100%;
+            // background: #fff;
+            // border-radius: 10px;
+            // gap: 60px;
+            // width: 494px;
+            // height: 479px;
+            background: #ffffff;
+            border-radius: 10px;
+          }
+          .address__title {
+            margin-bottom: 7px;
+          }
+          .address__desc {
+            margin-bottom: 60px;
+          }
+          .address__wrapper {
+            display: grid;
+            grid-template: 1fr 1fr / auto 1fr;
+            gap: 30px 40px;
+            margin-bottom: 60px;
+    
+            .address__item {
+              display: grid;
+              grid-auto-flow: row;
+              gap: 8px;
+    
+              .address__item-title {
+                font-family: Inter;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 16.94px;
+                text-align: left;
+                color: #616161;
+              }
+              .address__item-text {
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 19.36px;
+                text-align: left;
+                color: #000;
+              }
+    
+              &.address__item_address {
+                grid-column: 2 span;
+              }
+            }
+          }
+    
+          .address__btn {
+          }
+        }
+      }
+  
+    }
+  }  
+}
+// --------------------------------------- buy-page end ---------------------------------------
+
+
